# protein-prediction-project-2

./: .gitattributes  .gitignore  PROGRESS.md  README.md  README_bionemo_embeddings.md  embedding.py  embedding_visualization.ipynb  fetch_u4_meta_parallel.py  pair_u4_from_meta.py  pre_training_dataset.py  pyproject.toml  run_baselines.ipynb
data/: newly_discovered_dissimilar_proteins_2024.fasta  pre_training.fasta
models/: simple_mlp.py
outputs/: embedding-new-2.safetensors  embedding-newly-discovered-150M-avg.safetensors  embedding-newly-discovered-35M-avg.safetensors  embedding-newly-discovered-8M-avg.safetensors  embedding-pre-training-35M-avg.safetensors
outputs_samples/: S1.parquet
outputs_splits_final/: N_test.parquet  N_test_650M_embeddings.safetensors  N_test_8M_embeddings.safetensors  N_test_embeddings_fb.safetensors  N_test_embeddings_nvidia.safetensors  N_train.parquet  N_train_650M_embeddings.safetensors  N_train_8M_embeddings.safetensors  S1_test.parquet  S1_test_650M_embeddings.safetensors  S1_test_8M_embeddings.safetensors  S1_train.parquet  S1_train_650M_embeddings.safetensors  S1_train_8M_embeddings.safetensors  S2_test.parquet  S2_test_8M_embeddings.safetensors  S3_test.parquet  S3_test_8M_embeddings.safetensors  S3_train.parquet  S4_test.parquet  S4_test_8M_embeddings.safetensors  U4_test.parquet  U4_test_8M_embeddings.safetensors
outputs_splits_final/N_test_650M_pred/: predictions__rank_0__dp_rank_0.pt
scripts/: run_bionemo_embeddings.ps1  run_bionemo_embeddings.sh
slides/: project3b_slides.tex
utils/: run_baselines.py
(+41 files in other folders)
