[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.0",
    "evaluate>=0.4.6",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "safetensors>=0.4.5",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "matplotlib-inline>=0.2.1",
    "umap-learn>=0.5.9.post2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
