[project]
name = "membership-splits"
version = "0.1.0"
description = "Reproducible sampling pipeline for membership inference splits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.83",
    "datasets>=3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=14.0.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
cache-dir = ".uv-cache"

[project.optional-dependencies]
embedding = [
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "safetensors>=0.4.2",
]
baselines = [
    "safetensors>=0.4.2",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
]
